--- a/src/app/pages/userprofile/userprofile.page.html
+++ b/src/app/pages/userprofile/userprofile.page.html
@@ -19,19 +19,31 @@
  </p>
 
   
-  <div class="flex-center"><h3>Robert</h3></div>
+  <div class="flex-center"><h3>Alex Wassabi</h3></div>
   <!-- <div class="flex-center" href = size = "small">Edit</div> -->
   <p class="flex-center">
     <ion-card-content class="card" >
-      <ion-item><ion-label>Hi , its Alex out here doing dope things</ion-label></ion-item>
+      <ion-item style="border-radius: 30px;"><ion-label>Hi , its Alex out here doing dope things <br> and enjoying a Healthy life</ion-label></ion-item>
     </ion-card-content>
   </p>
 
 
-  <ion-card-content >
-    <ion-title class="title"><b>24</b><br>Friends</ion-title>
-    <ion-title class="title"><b>3</b><br>GymGroups</ion-title>
-  </ion-card-content>
+
+    
+  <ion-row>
+    <ion-col size="6">
+      <ion-title class="title" style="white-space: small; margin-left: 40px"><b>24</b><br>Friends</ion-title>
+    </ion-col>
+    <ion-col size="6">
+      <ion-title class="title" style="white-space: small;"><b>12</b><br>Groups</ion-title>
+    </ion-col>
+  </ion-row>
+
+ <br>
+ <br>
+ <br>
+ 
+
  
   
     <div class="flex-center"> 
