--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -32,7 +32,7 @@
     </ion-buttons>
     <ion-title>
       <ion-chip class="clickable" routerLink="/userprofile">
-        Hi User
+        John Doe
         <ion-avatar>
           <img src="https://ionicframework.com/docs/img/demos/avatar.svg"/>
         </ion-avatar>
