--- a/src/app/pages/splash/splash.page.scss
+++ b/src/app/pages/splash/splash.page.scss
@@ -1,76 +1,114 @@
 
-.logo-img {
-    width: 170px;
-    height: 170px;
-    position:relative;
-    justify-items: center;
-    overflow: hidden;
-  }
-  .getSButton{
-    margin-left: 25%;
-    width:50%;
-    justify-content: center;
-    font-size: 20px;
-  }
+// .logo-img {
+//     max-width: 800px;
+//     height: 170px;
+//     position:relative;
+//     justify-items: center;
+//     overflow: hidden;
+//   }
+//   .getSButton{
+//     margin-left: 25%;
+//     width:50%;
+//     justify-content: center;
+//     font-size: 20px;
+//   }
   
-  .h1
-  {
-    font-size: 20px;
-    font-weight: 700;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    color: #000000;
-    text-align: center;
-    margin-top: 20px;
-    margin-bottom: 20px;
-  }
+//   .h1
+//   {
+//     font-size: 20px;
+//     font-weight: 700;
+//     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+//     color: #000000;
+//     text-align: center;
+//     margin-top: 20px;
+//     margin-bottom: 20px;
+//   }
 
-  .splash-card
-  {
-    margin-top: 20px;
-    margin-bottom: 20px;
-    margin-left: 20px;
-    margin-right: 20px;
-    border-radius: 20px;
-    background-color: #ffffff;
-    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
-    width: auto;
-    height: 70%;
-  }
+//   .splash-card
+//   {
+//     margin-top: 20px;
+//     margin-bottom: 20px;
+//     margin-left: 20px;
+//     margin-right: 20px;
+//     border-radius: 20px;
+//     background-color: #ffffff;
+//     box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
+//     width: auto;
+//     height: 70%;
+//   }
 
-  .getStartedB
-  {
-    margin-top: 20px;
-    margin-bottom: 20px;
-    margin-left: 20px;
-    margin-right: 20px;
-    border-radius: 20px;
-    background-color: #ffffff;
-    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
-    width: auto;
-    height: 8%;
-    position: bottom;
-  }
-  // .full-screen-card {
-  //   display: flex;
-  //   flex-direction: column;
-  //   height: 100vh;
-  // }
+//   .getStartedB
+//   {
+//     margin-top: 20px;
+//     margin-bottom: 20px;
+//     margin-left: 20px;
+//     margin-right: 20px;
+//     border-radius: 20px;
+//     background-color: #ffffff;
+//     box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
+//     width: auto;
+//     height: 8%;
+//     position: bottom;
+//   }
+//   // .full-screen-card {
+//   //   display: flex;
+//   //   flex-direction: column;
+//   //   height: 100vh;
+//   // }
 
-  .full-screen-card {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 80vh;
-  }
+//   .full-screen-card {
+//     display: flex;
+//     flex-direction: column;
+//     justify-content: space-between;
+//     height: 100vh;
+//     margin:0px;
+//   }
   
-  .full-screen-card .getSButton {
-    // align-self: flex-end;
-    margin-bottom: 20px;
-  }
+//   .full-screen-card .getSButton {
+//     // align-self: flex-end;
+//     margin-bottom: 20px;
+//   }
   
-  .logo-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 20px;
+//   .logo-container {
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//     // margin-bottom: 20px;
+//     // margin-top: 20px;
+//     width:100%;
+//     max-height: 500px;
+//     padding: 10px;
+//     img {
+//       width: 100%;
+//       height: 100%;
+//     }
+//   }
+
+//   .inner-wrapper {
+//     max-width: 800px;
+//     height: 100%;
+//     margin: auto;
+//     overflow: hidden;
+//   }
+
+
+ion-card {
+  height: 100%;
+  margin:0px;
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 0px;
+  .inner-wrapper {
+    max-width: 800px;
+    margin: 20px;
+    .logo-container {
+      background-color: aqua;
+    }
   }
+}
+
+ion-content {
+  overflow: hidden;
+}
+
