Added construction page, added a global css file

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -12,6 +12,7 @@
       <ion-label class="menu-label">
         Settings
       </ion-label>
+      <ion-icon name="chevron-forward-outline" slot="end"></ion-icon>
     </ion-item>
 
     <ion-item class="clickable" routerLink="/logout">
@@ -20,6 +21,7 @@
       <ion-label class="menu-label">
         Logout
       </ion-label>
+      <ion-icon name="chevron-forward-outline" slot="end"></ion-icon>
     </ion-item>
   </ion-content>
 </ion-menu>
