--- a/src/app/pages/chatbot/chatbot.page.html
+++ b/src/app/pages/chatbot/chatbot.page.html
@@ -1,13 +1,9 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>chatbot</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">chatbot</ion-title>
-    </ion-toolbar>
-  </ion-header>
-</ion-content>
+<div class="outer-container">
+  <ion-content>
+    <div class="inner-container">
+      <div class="message">
+        Page under construction :)
+      </div>
+   </div>
+  </ion-content>
+</div>
