--- a/src/app/pages/global.scss
+++ b/src/app/pages/global.scss
@@ -6,7 +6,7 @@
 .inner-container {
     padding-top: 50px;
     height: 100%;
-    background-color: red;
+    background-color: aqua;
     display:flex;
     align-items: center;
     justify-content: center;
@@ -16,5 +16,6 @@
         font-size: xx-large;
         font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
         color:aqua;
+        text-shadow: 0px 2px 10px;
     }
 }
