--- a/src/app/pages/splash/splash.page.scss
+++ b/src/app/pages/splash/splash.page.scss
@@ -99,6 +99,8 @@ ion-card {
   align-items: center;
   justify-content: center;
   border-radius: 0px;
+  border: 5px solid lightblue;
+  overflow-y:auto;
   .inner-wrapper {
     max-width: 800px;
     margin: 20px;
