--- a/src/app/pages/setprofile/setprofile.page.html
+++ b/src/app/pages/setprofile/setprofile.page.html
@@ -14,45 +14,52 @@
       <ion-card-header>
         <ion-card-title>Edit Profile</ion-card-title>
       </ion-card-header>
+
        <div class="avatar-container" (click)="openPicturePopup()">
         <ion-avatar  class="preview-container" *ngIf="ProfilePicture">
           <img [src]="ProfilePicture" alt="Old Profile Picture">
         </ion-avatar>
       </div>
 
-        <ion-input type="file" accept="image/*" (change)="onPictureChange($event)"></ion-input>
+    <ion-input type="file" accept="image/*" (change)="onPictureChange($event)"></ion-input>
 
     </ion-card>
-    <ion-card>
+
+    <app-setprofile-c
+    [user] = "user"
+    >  
+    <ion-button expand="block" (click)="saveProfile()">Save</ion-button>
+    </app-setprofile-c>
+
+    <!-- <ion-card>
 
       <ion-item>
         <ion-label position="stacked">Name</ion-label>
         <ion-input type="text"  [(ngModel)]="user.name"></ion-input>
       </ion-item>
-  
+    
       <ion-item>
         <ion-label position="stacked">Email</ion-label>
         <ion-input type="email"  disabled = "true" [(ngModel)]="user.email"></ion-input>
       </ion-item>
-  
+    
       <ion-item>
         <ion-label position="stacked">Bio</ion-label>
         <ion-textarea  [(ngModel)]="user.bio"></ion-textarea>
       </ion-item>
-  
+    
       
       <ion-item>
         <ion-label position="stacked">Phone Number</ion-label>
         <ion-input type="text"  [(ngModel)]="user.phoneNumber"></ion-input>
       </ion-item>
-
-      <!-- <ion-item>
+    
+       <ion-item>
         <ion-label position="stacked">Change Password</ion-label>
         <ion-input type="password"  [(ngModel)]="user.cPassword"></ion-input>
       </ion-item> -->
-
-      <ion-button expand="block" (click)="saveProfile()">Save</ion-button>
     
-  </ion-card>
+    
+    <!-- </ion-card> --> -->
 
 </ion-content>
