added search query interface, Friend page modified

--- a/src/app/pages/friends/friend/friend.component.html
+++ b/src/app/pages/friends/friend/friend.component.html
@@ -5,7 +5,7 @@
       <img src="assets/sweatsessionlogotransparent1.png"/>
     </ion-avatar>
     <ion-text>
-      {{name}}
+      {{friend.name}}
     </ion-text>
     <ion-icon name="chevron-forward-outline" slot = "end"></ion-icon>
   </ion-item>
