--- a/src/app/pages/friends/friends.page.html
+++ b/src/app/pages/friends/friends.page.html
@@ -14,7 +14,7 @@
 <ion-content>
   <ion-searchbar placeholder="find friend"></ion-searchbar>
   <user-friend *ngFor ="let friend of friends" 
-    [name] = "friend"
+    [friend] = "friend"
   >
   </user-friend>
 </ion-content>
