--- a/src/app/pages/workout-scheduling/schedule/schedule.component.html
+++ b/src/app/pages/workout-scheduling/schedule/schedule.component.html
@@ -2,7 +2,7 @@
   <ion-item>
     <ion-icon name="receipt-outline"></ion-icon>
     <ion-text>
-      {{name}}
+      {{schedule.name}}
     </ion-text>
     <!-- <ion-button slot="end">remove</ion-button> -->
     <ion-button slot="end" (click)="viewSchedule()">view</ion-button>
