--- a/src/app/pages/workout-scheduling/popout-schedule/popout-schedule.component.html
+++ b/src/app/pages/workout-scheduling/popout-schedule/popout-schedule.component.html
@@ -4,10 +4,10 @@
       <ion-card-title>Workout schedule</ion-card-title>
     </ion-card-header>
     <ion-card-content>
-      <ion-icon name="barbell-outline"></ion-icon><ion-text class="schedule-value">pull ups</ion-text><br>
-      <ion-icon name="calendar-outline"></ion-icon><ion-text class="schedule-value">2023-06-01</ion-text><br>
-      <ion-icon name="time-outline"></ion-icon><ion-text class="schedule-value">18:00</ion-text><br>
-      <ion-icon name="barbell-outline"></ion-icon><ion-text class="schedule-value">zone fitness, menlyn</ion-text><br><br>
+      <ion-icon name="barbell-outline"></ion-icon><ion-text class="schedule-value">{{schedule.name}}</ion-text><br>
+      <ion-icon name="calendar-outline"></ion-icon><ion-text class="schedule-value">{{schedule.date}}</ion-text><br>
+      <ion-icon name="time-outline"></ion-icon><ion-text class="schedule-value">{{schedule.time}}</ion-text><br>
+      <ion-icon name="barbell-outline"></ion-icon><ion-text class="schedule-value">{{schedule.location}}</ion-text><br><br>
     </ion-card-content>
     <ion-button expand="full" (click)="closePopup()">Close</ion-button>
   </ion-card>
