--- a/src/app/pages/workout-scheduling/schedule/schedule.component.html
+++ b/src/app/pages/workout-scheduling/schedule/schedule.component.html
@@ -1,10 +1,20 @@
 <ion-card>
-  <ion-item>
-    <ion-icon name="receipt-outline"></ion-icon>
-    <ion-text>
-      {{schedule.name}}
-    </ion-text>
-    <!-- <ion-button slot="end">remove</ion-button> -->
-    <ion-button slot="end" (click)="viewSchedule()">view</ion-button>
-  </ion-item>
+  <ion-item-sliding>
+    <ion-item>
+      <ion-icon name="receipt-outline"></ion-icon>
+      <ion-text>
+        {{schedule.name}}
+      </ion-text>
+      <ion-button slot="end" (click)="viewSchedule()">view</ion-button>
+    </ion-item>
+
+    <ion-item-options side="start">
+      <ion-item-option color="success">Edit</ion-item-option>
+    </ion-item-options>
+
+    <ion-item-options side="end">
+      <ion-item-option>Favorite</ion-item-option>
+      <ion-item-option color="danger">Delete</ion-item-option>
+    </ion-item-options>
+  </ion-item-sliding>
 </ion-card>
