--- a/src/app/pages/workout-scheduling/workout-scheduling.page.html
+++ b/src/app/pages/workout-scheduling/workout-scheduling.page.html
@@ -12,16 +12,18 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-searchbar placeholder="find schedule"
-    [(ngModel)] = "searchTerms.searchQuery"
-    (ionInput) = onSearchInput($event)
-  ></ion-searchbar>
-  <div id="search-suggestions">
-    <ion-list *ngIf="searchTerms.showSuggestions">
-      <ion-item *ngFor="let suggestion of searchTerms.filteredSuggestions" (click)="find(suggestion.name!)">
-        {{ suggestion.name }}
-      </ion-item>
-    </ion-list>
+  <div class="search">
+    <ion-searchbar placeholder="find schedule"
+      [(ngModel)] = "searchTerms.searchQuery"
+      (ionInput) = onSearchInput($event)
+    ></ion-searchbar>
+    <div id="search-suggestions">
+      <ion-list *ngIf="searchTerms.showSuggestions">
+        <ion-item *ngFor="let suggestion of searchTerms.filteredSuggestions" (click)="find(suggestion.name!)">
+          {{ suggestion.name }}
+        </ion-item>
+      </ion-list>
+    </div>
   </div>
   <workout-schedule *ngFor = "let schedule of schedules"
     [schedule] = schedule
