--- a/src/app/pages/friends/friends.page.html
+++ b/src/app/pages/friends/friends.page.html
@@ -12,7 +12,19 @@
 </ion-header>
 
 <ion-content>
-  <ion-searchbar placeholder="find friend"></ion-searchbar>
+  <div class="search">
+    <ion-searchbar placeholder="find schedule"
+      [(ngModel)] = "searchTerms.searchQuery"
+      (ionInput) = onSearchInput($event)
+    ></ion-searchbar>
+    <div id="search-suggestions">
+      <ion-list *ngIf="searchTerms.showSuggestions">
+        <ion-item *ngFor="let suggestion of searchTerms.filteredSuggestions" (click)="find(suggestion.name!)">
+          {{ suggestion.name }}
+        </ion-item>
+      </ion-list>
+    </div>
+  </div>
   <user-friend *ngFor ="let friend of friends" 
     [friend] = "friend"
   >
