--- a/src/app/pages/friends/friends.page.html
+++ b/src/app/pages/friends/friends.page.html
@@ -13,7 +13,7 @@
 
 <ion-content>
   <div class="search">
-    <ion-searchbar placeholder="find schedule"
+    <ion-searchbar placeholder="find a friend"
       [(ngModel)] = "searchTerms.searchQuery"
       (ionInput) = onSearchInput($event)
     ></ion-searchbar>
