--- a/src/app/pages/workout-scheduling/popout-schedule/popout-schedule.component.html
+++ b/src/app/pages/workout-scheduling/popout-schedule/popout-schedule.component.html
@@ -7,7 +7,7 @@
       <ion-icon name="barbell-outline"></ion-icon><ion-text class="schedule-value">{{schedule.name}}</ion-text><br>
       <ion-icon name="calendar-outline"></ion-icon><ion-text class="schedule-value">{{schedule.date}}</ion-text><br>
       <ion-icon name="time-outline"></ion-icon><ion-text class="schedule-value">{{schedule.time}}</ion-text><br>
-      <ion-icon name="barbell-outline"></ion-icon><ion-text class="schedule-value">{{schedule.location}}</ion-text><br><br>
+      <ion-icon name="location-outline"></ion-icon><ion-text class="schedule-value">{{schedule.location}}</ion-text><br><br>
     </ion-card-content>
     <ion-button expand="full" (click)="closePopup()">Close</ion-button>
   </ion-card>
