--- a/src/app/pages/workout-scheduling/schedule/schedule.component.html
+++ b/src/app/pages/workout-scheduling/schedule/schedule.component.html
@@ -14,7 +14,7 @@
 
     <ion-item-options side="end">
       <ion-item-option>Favorite</ion-item-option>
-      <ion-item-option color="danger">Delete</ion-item-option>
+      <ion-item-option color="danger" (click)="removeSchedule()">Delete</ion-item-option>
     </ion-item-options>
   </ion-item-sliding>
 </ion-card>
