--- a/src/app/pages/notifications/notifications.page.html
+++ b/src/app/pages/notifications/notifications.page.html
@@ -12,23 +12,30 @@
 <ion-content class="main">
   <ion-item lines="none">
     <ion-title slot="start" style="display:inline-block"><b>Today</b></ion-title>
-    <ion-title slot="end" style="display:inline-block" ><ion-button fill="clear">Clear all</ion-button></ion-title>
+    <ion-title slot="end" style="display:inline-block" ><ion-button fill="clear" (click)="clearNotifications()">Clear all</ion-button></ion-title>
   </ion-item>
     <br>
     <br>
     
-  
-  <ion-card class="Mcard" *ngFor="let notice of noticeList | async">
+  <div *ngIf="noticeamount > 0" >
+  <ion-card class="Mcard" *ngFor="let notice of noticeList">
     <ion-card-content style="display:flex ; align-items:center" >
   <ion-avatar slot="start">
     <img alt="Silhouette of a person's head" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
   </ion-avatar>
-  <ion-label>{{notice.sendername}}</ion-label>
+  <ion-label><b>&nbsp;{{notice.sendername}}</b></ion-label>
+  <ion-label>&nbsp;{{notice.message}}</ion-label>
 </ion-card-content>
+<ion-footer slot="end">
+  {{notice.sentdate}}
+</ion-footer>
 </ion-card>
+</div>
 <br>
 
-
+<ion-card *ngIf="noticeamount == 0" class="flex-center">
+<ion-button (click)="presentAlert()">No Notifications!</ion-button>
+</ion-card>
 
 
 
