--- a/src/app/pages/setprofile/setprofile.page.html
+++ b/src/app/pages/setprofile/setprofile.page.html
@@ -22,13 +22,27 @@
 
         <ion-input type="file" accept="image/*" (change)="onPictureChange($event)"></ion-input>
 
-    </ion-card>
-
-    <ion-card>
-
+      </ion-card>
+      
+      <ion-card>
+        <ion-button fill = "clear" (click)="toggleEditMode()">
+          Edit
+        </ion-button>
+        
+        <!-- <ion-button slot="end" fill="clear" (click)="">Edit</ion-button> -->
       <ion-item>
         <ion-label position="stacked">Name</ion-label>
-        <ion-input type="text"  [(ngModel)]="user.name"></ion-input>
+        <ion-input type="text" [(ngModel)]="user.name" [disabled]="!isEditMode"></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label position="stacked">Bio</ion-label>
+        <ion-textarea  [(ngModel)]="user.bio"></ion-textarea>
+      </ion-item>
+
+      <ion-item>
+        <ion-label position="stacked">Phone Number</ion-label>
+        <ion-input type="text"  [(ngModel)]="user.phoneNumber"></ion-input>
       </ion-item>
     
       <ion-item>
@@ -36,23 +50,12 @@
         <ion-input type="email"  disabled = "true" [(ngModel)]="user.email"></ion-input>
       </ion-item>
     
-      <ion-item>
-        <ion-label position="stacked">Bio</ion-label>
-        <ion-textarea  [(ngModel)]="user.bio"></ion-textarea>
-      </ion-item>
-    
-      
-      <ion-item>
-        <ion-label position="stacked">Phone Number</ion-label>
-        <ion-input type="text"  [(ngModel)]="user.phoneNumber"></ion-input>
-      </ion-item>
-    
       <!-- <ion-item>
         <ion-label position="stacked">Change Password</ion-label>
         <ion-input type="password"  [(ngModel)]="user.cPassword"></ion-input>
       </ion-item> -->
     
-      <ion-button expand="block" (click)="saveProfile()">Save</ion-button>
+      <ion-button expand="block" (click)="saveProfile()" [disabled]="!isEditMode">Save</ion-button>
     
     </ion-card>
 
