--- a/src/app/pages/friends/friends.page.html
+++ b/src/app/pages/friends/friends.page.html
@@ -5,7 +5,7 @@
       <ion-title>Friends</ion-title>
       <ion-item class="addFriend-button" slot="end">
         <ion-icon name="add-outline"></ion-icon>
-        <ion-icon name="people-outline"></ion-icon>
+        <ion-icon name="people-outline" routerLink="/home/search"></ion-icon>
       </ion-item>
     </ion-item>
   </ion-toolbar>
