--- a/src/app/pages/friends/friend/friend.component.html
+++ b/src/app/pages/friends/friend/friend.component.html
@@ -12,7 +12,7 @@
     </ion-item>
 
     <ion-item-options side="end">
-      <ion-item-option color="danger">Unfriend</ion-item-option>
+      <ion-item-option color="danger" (click)="removeFriend()">Unfriend</ion-item-option>
     </ion-item-options>
   </ion-item-sliding>
 </ion-card>
