--- a/src/app/pages/badges/badges.page.html
+++ b/src/app/pages/badges/badges.page.html
@@ -1,13 +1,21 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>badges</ion-title>
-  </ion-toolbar>
+  <ion-item style="display: flex; align-items: center;">
+    <ion-icon name="arrow-back-outline" routerLink="/userprofile" style="font-size: 2rem;"></ion-icon>
+    <ion-title style="margin-left: 1rem;">Badges</ion-title>
+  </ion-item>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
+<ion-content class="badgesContainer">
+  <!-- <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">badges</ion-title>
     </ion-toolbar>
-  </ion-header>
+  </ion-header> -->
+  <ion-grid class="loginGrid">
+    <badge *ngFor ="let badge of badges" 
+    [name] = "badge.header"
+    [description] = "badge.description"
+    [received] = "badge.received"
+  ></badge>
+  </ion-grid>
 </ion-content>
