--- a/src/app/pages/otheruser/otheruser.page.html
+++ b/src/app/pages/otheruser/otheruser.page.html
@@ -12,35 +12,35 @@
  <ion-card class="otheruser-profile">
   <ion-item>
     <ion-avatar>
-      <img src="{{user.profileURL}}"/>
+      <img src="{{user!.profileURL}}"/>
     </ion-avatar>
   </ion-item>
   <ion-item id="userName">
-      {{user.name}}
-      <ion-button slot="end" *ngIf="friendshipStatus" (click)="removeFriend()">
+      {{user!.name}}
+      <ion-button slot="end" *ngIf="otherUserInfo.friendshipStatus" (click)="removeFriend()">
         <ion-icon name="person-outline"></ion-icon>
         remove friend
       </ion-button>
-      <ion-button slot="end" *ngIf="!friendshipStatus" (click)="addFriend()">
+      <ion-button slot="end" *ngIf="!otherUserInfo.friendshipStatus" (click)="addFriend()">
         <ion-icon name="person-outline"></ion-icon>
         add friend
       </ion-button>
   </ion-item>
   <ion-item id="userBio">
-    {{user.bio}}
+    {{user!.bio}}
   </ion-item>
  </ion-card>
  <ion-card>
   <ion-item>
     <ion-icon name="barbell-outline"></ion-icon>
-    <ion-card-header>WorkoutSchedules</ion-card-header>
+    <ion-card-header>{{otherUserInfo.workoutSchedule!.length}} WorkoutSchedules</ion-card-header>
     <ion-button slot="end" (click)="viewSchedules()">view</ion-button>
   </ion-item>
  </ion-card>
  <ion-card>
   <ion-item>
     <ion-icon name="people-outline"></ion-icon>
-    <ion-card-header>30 Friends</ion-card-header>
+    <ion-card-header>{{otherUserInfo.friends!.length}} Friends</ion-card-header>
     <ion-button slot="end" (click)="viewFriends()">view</ion-button>
   </ion-item>
  </ion-card>
