--- a/src/app/pages/otheruser/otheruser.page.scss
+++ b/src/app/pages/otheruser/otheruser.page.scss
@@ -10,3 +10,30 @@
         font-size: 25px;
     }
 }
+
+.container {
+    position: relative;
+    height: 300px;
+    overflow: hidden;
+    margin: 20px;
+    border-radius: 4px;
+    h2 {
+        text-align: center;
+    }
+  }
+  
+  .content {
+    position: absolute;
+    bottom: -100%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: lightblue;
+    transition: bottom 0.5s;
+    overflow-y:auto;
+  }
+  
+  .content.active {
+    bottom: 0;
+  }
+  
