--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -42,8 +42,9 @@
               routerLink="/workout-scheduling"
               class="clickable" slot="end">
     </ion-icon>
+    <ion-badge color="success" slot="end">80</ion-badge>
     <ion-icon name="notifications-outline" 
-              routerLink="/home/notifications"
+              routerLink="/notifications"
               class="clickable" slot="end">
     </ion-icon>
   </ion-toolbar>
