--- a/src/app/pages/setprofile/setProfileC/setProfileC.component.scss
+++ b/src/app/pages/setprofile/setProfileC/setProfileC.component.scss
@@ -42,8 +42,73 @@
     left: 0;
     width: 100%;
     height: 100%;
-    opacity: 0;
     z-index: 2;
     cursor: pointer;
   }
   
+  .file-input {
+    position: absolute;
+    opacity: 0;
+    pointer-events: none;
+  }
+  
+  // .custom-button {
+  //   /* Add your custom button styles here */
+  // }
+  .user-thumb {
+    display: flex;
+    justify-content: center;
+    background: #e9e9e9;
+    border-radius: 50%;
+    height: 200px;
+    width: 200px;
+  }
+  
+  .user-thumb--edit {
+    position: relative;
+    margin-bottom: 1rem;
+  }
+  
+  .custom-file {
+    margin: 0;
+    height: auto;
+  }
+  
+  .custom-file__input {
+    position: absolute;
+    opacity: 0;
+    visibility: hidden;
+    width: 1px;
+    height: 1px;
+  }
+  
+  .custom-file__label {
+    cursor: pointer;
+    border: 0;
+    text-align: center;
+    font-weight: 500;
+    font-size: 1rem;
+    display: block;
+    margin: 0;
+    border-radius: 50%;
+    padding: 0;
+    background: transparent;
+    position: relative;
+    overflow: hidden;
+  }
+  
+  .user-thumb--edit .custom-file::before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    text-align: center;
+    transition: all 0.15s ease-in-out;
+    z-index: 0;
+    background: #000000 url('https://image.flaticon.com/icons/svg/61/61456.svg');
+    background: 1.4rem auto;
+    width: 1px;
+    height:1px;
+    border-radius: 100%;
+    box-shadow: 0px 6px 6px -3px rgb(0 0 0 / 20%), 0px 10px 14px 1px rgb(0 0 0 / 14%), 0px 4px 18px 3px rgb(0 0 0 / 12%);
+  }
