--- a/src/app/pages/userprofile/userprofile.page.html
+++ b/src/app/pages/userprofile/userprofile.page.html
@@ -3,9 +3,15 @@
     <ion-item>
       <ion-icon name="arrow-back-outline" routerLink="/home/dashboard"></ion-icon>
       <ion-title>Profile</ion-title>
-      <ion-item class="editProfile-button" slot="end">
-        <ion-title class="header">Edit</ion-title>
-      </ion-item>
+      <ion-icon name="create-outline" routerLink="/setprofile" slot="end">
+        <ion-label>Edit</ion-label>
+      </ion-icon>
+
+      <!-- <ion-button class="button"expand="block" routerLink="/setprofile"><ion-icon name="create-outline" slot="start"></ion-icon> -->
+      
+        <!-- <ion-item class="editProfile-button" slot="end">
+        <ion-title class="header">Edit</ion-title> -->
+      <!-- </ion-item> -->
     </ion-item>
   </ion-toolbar>
 </ion-header>
@@ -67,11 +73,12 @@
       <ion-card-content>
         <ion-button class="button"expand="block" (click)="Schedule()"><ion-icon name="clipboard-outline" slot="start"></ion-icon>&nbsp;Schedule&nbsp;<ion-icon name="chevron-forward-outline" slot="end"></ion-icon></ion-button>
       </ion-card-content>
-      <ion-card-content>
+      <!-- <ion-card-content>
         <ion-button class="button"expand="block" routerLink="/setprofile"><ion-icon name="create-outline" slot="start"></ion-icon>&nbsp;Edit&nbsp;<ion-icon name="chevron-forward-outline" slot="end"></ion-icon></ion-button>
-      </ion-card-content>
+      </ion-card-content> -->
       
-    </ion-card></div>
+    </ion-card>
+  </div>
     
     
   
