--- a/src/app/pages/workout-tracking/workout-tracking.page.html
+++ b/src/app/pages/workout-tracking/workout-tracking.page.html
@@ -1,15 +1,14 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>workout_tracking</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">workout_tracking</ion-title>
     </ion-toolbar>
   </ion-header>
+
+  <div class="heading-container">
+    <h1>Workout Tracking</h1>
+    <h2>Customize your workout plan here</h2>
+  </div>
 
   <div class="grid-container">
     <div class="form-container">
@@ -19,11 +18,17 @@
           <div [formGroupName]="i">
             <input formControlName="name" placeholder="Name" />
             <input formControlName="sets" placeholder="Sets" />
+            <input formControlName="reps" placeholder="Repetitions" />
             <input formControlName="weight" placeholder="Weight (kg)" />
           </div>
+          <ion-button color="danger" type="button" (click)="deleteExercise(i)">
+            <ion-icon name="trash"></ion-icon>
+          </ion-button>
         </div>
 
-        <button type="button" (click)="addExercise()">Add Exercise</button>
+        <ion-button color="success" type="button" (click)="addExercise()" [disabled]="exercises.length >= 10">
+          <ion-icon name="add"></ion-icon>
+        </ion-button>
       </form>
     </div>
   </div>
