--- a/src/app/pages/workout-tracking/workout-tracking.page.scss
+++ b/src/app/pages/workout-tracking/workout-tracking.page.scss
@@ -17,7 +17,7 @@ ion-content {
   padding: 20px;
   width: 80%;
   text-align: center;
-  margin: 0 auto; // Add margin: 0 auto to center the form-container horizontally
+  margin: auto; // Add margin: 0 auto to center the form-container horizontally
 }
 
 input {
@@ -29,4 +29,45 @@ input {
 .exercise-number {
   font-weight: bold;
   margin-top: 10px;
+}
+
+.heading-container {
+  text-align: center;
+  margin-top: 100px;
+  margin-bottom: 20px;
+}
+
+.heading-container h1,
+.heading-container h2 {
+  font-family: 'Montserrat', sans-serif;
+  margin: 0;
+}
+
+.heading-container h1 {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.heading-container h2 {
+  font-size: 18px;
+  font-weight: normal;
+  color: grey;
+}
+
+
+
+.exercise-number,
+input[formControlName="name"],
+input[formControlName="sets"],
+input[formControlName="reps"],
+input[formControlName="weight"] {
+  font-family: 'Montserrat', sans-serif;
+}
+
+input[formControlName="name"],
+input[formControlName="sets"],
+input[formControlName="reps"],
+input[formControlName="weight"] {
+  border-radius: 12px;
 }
