other user friends and workout schedule view added

--- a/src/app/pages/otheruser/friends/friends.component.html
+++ b/src/app/pages/otheruser/friends/friends.component.html
@@ -1,3 +1,10 @@
-<p>
-  friends works!
-</p>
+<div class = "outer-container">
+  <div class="body-content">
+    <ion-card *ngFor = "let friend of friends">
+      <ion-avatar>
+        <img src = "assets/sweatsessionlogotransparent1.png" alt="image here">
+      </ion-avatar>
+      <ion-text>{{friend.name}}</ion-text>
+    </ion-card>
+  </div>
+</div>
