--- a/src/app/pages/otheruser/schedules/schedules.component.html
+++ b/src/app/pages/otheruser/schedules/schedules.component.html
@@ -1,7 +1,7 @@
 <div class = "outer-container">
   <div class="body-content">
     <ion-card *ngFor = "let schedule of schedules">
-      <ion-icon name = "reciept-outline" slot = "start"></ion-icon>
+      <ion-icon name = "receipt-outline" slot = "start"></ion-icon>
       <ion-card-header>{{schedule.name}}</ion-card-header>
     </ion-card>
   </div>
