added/changed badges

--- a/src/app/pages/badges/badge/badge.component.html
+++ b/src/app/pages/badges/badge/badge.component.html
@@ -7,7 +7,7 @@
         </ion-col>
         <ion-col class="content">
           <div class="badgeHeader">{{name}}</div>
-          <div class="badgeDescription">{{description}}</div>
+          <div class="badgeDescription">{{ received ? receivedDescription : notReceivedDescription }}</div>
         </ion-col>
       </ion-row>
     </ion-grid>
