--- a/src/app/pages/badges/badge/badge.component.scss
+++ b/src/app/pages/badges/badge/badge.component.scss
@@ -39,6 +39,7 @@ div {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    font-weight: 700;
 }
 
 .badgeDescription {
