--- a/src/app/pages/friends/friends.page.html
+++ b/src/app/pages/friends/friends.page.html
@@ -3,9 +3,9 @@
     <ion-item>
       <ion-icon name="arrow-back-outline" routerLink="/userprofile"></ion-icon>
       <ion-title>Friends</ion-title>
-      <ion-item class="addFriend-button" slot="end">
+      <ion-item class="addFriend-button" slot="end" routerLink="/home/search">
         <ion-icon name="add-outline"></ion-icon>
-        <ion-icon name="people-outline" routerLink="/home/search"></ion-icon>
+        <ion-icon name="people-outline"></ion-icon>
       </ion-item>
     </ion-item>
   </ion-toolbar>
